--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-menu/menu": "^1.1.5",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.6",
     "expo": "~51.0.28",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
+    "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
@@ -35,11 +41,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-ios-context-menu": "^2.5.1",
+    "react-native-ios-utilities": "^4.4.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "zeego": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
